# soft-mate

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CODE_CLEANUP_SPEC.md  FMSYNTH_IMPLEMENTATION.md  FX_COMMANDS_SPEC.md  M8_APP_AUTOMATION_SPEC.md  M8_AUDIO_ANALYSIS_SPEC.md  M8_CAPTURE_SPEC.md  M8_DEVICE_CONTROL_SPEC.md  M8_DRIVER_BUGS.md  M8_HARDWARE_TEST_SPEC.md  M8_PERSISTENCE_SPEC.md  M8_SAMPLER_COMPLETION_SPEC.md  TABLE_IMPLEMENTATION.md  WAVSYNTH_IMPLEMENTATION.md  daisysp_msvc_compat.h  hw_buttons.json  status.md  test_6_5_1.ps1  test_6_5_2.ps1
archive/: BUG_TESTFILE_DC_DRONE.md  M8_UI_HARNESS_SPEC.md  TESTING.MD
build_render/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  m8_clone.sln  m8_clone.vcxproj  m8_clone.vcxproj.filters  m8_engine.vcxproj  m8_engine.vcxproj.filters  m8_render.vcxproj  m8_render.vcxproj.filters  m8_tests-b12d07c_include.cmake  m8_tests-b12d07c_tests.cmake  m8_tests.vcxproj  m8_tests.vcxproj.filters
build_render/Release/: m8_engine.lib  song_events.csv
build_render/m8_clone.dir/Release/: m8_clone.exe.recipe
build_render/m8_clone.dir/Release/m8_clone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_render/m8_engine.dir/Release/m8_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_render/m8_render.dir/Release/: m8_render.exe.recipe
build_render/m8_render.dir/Release/m8_render.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  m8_render.lastbuildstate
build_render/m8_tests.dir/Release/: m8_tests.exe.recipe
build_render/m8_tests.dir/Release/m8_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_render/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_render/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/tools/: README.md  m8_analyze.md  m8_capture.md  m8_composesong.md  m8_diffcheck.md  m8_makeprobe.md  m8_makesong.md  m8_nav.md  m8_render.md  m8_spectrum.md
songs/: README.md  opening.m8s  sunrise.m8s
src/: main.cpp  main_stage1.cpp
src/analysis/: AudioMetrics.cpp  AudioMetrics.h  Fft.h
src/engine/: CommandRing.h  Engine.cpp  Engine.h  EngineEvents.h  EngineStateUpdater.h  Envelopes.h  InstrumentSamplerParams.h  Lfo.h  Modulation.h  SamplePool.cpp  SamplePool.h  SamplerEngine.cpp  SamplerEngine.h  SeqTypes.h  Sequencer.cpp  Sequencer.h  SynthVoice.cpp  SynthVoice.h  ZdfFilter.h
src/engine/stmlib/: stmlib.h
src/io/: SongIO.cpp  SongIO.h
src/tools/: main_analyze.cpp  main_capture.cpp  main_composesong.cpp  main_diffcheck.cpp  main_makeprobe.cpp  main_makesong.cpp  main_nav.cpp  main_render.cpp  main_spectrum.cpp
src/tools/m8/: DeviceScriptRunner.cpp  DeviceScriptRunner.h  Gestures.cpp  Gestures.h  M8Device.cpp  M8Device.h  Primitives.cpp  Primitives.h  ScreenModel.h
src/ui/: FileBrowser.cpp  FileBrowser.h  HexFmt.h  Renderer.cpp  Renderer.h  ScriptRunner.cpp  ScriptRunner.h  UiCommands.h  UiEditHelpers.h  ViewManager.cpp  ViewManager.h  font.h  ui_json.html  ui_types.h
src/ui/screens/chain/: ChainScreen.cpp  ChainScreen.h  ChainScreenLayout.h
src/ui/screens/effects/: EffectsScreen.cpp  EffectsScreen.h  EffectsScreenLayout.h
src/ui/screens/groove/: GrooveScreen.cpp  GrooveScreen.h  GrooveScreenLayout.h
src/ui/screens/inst_pool/: InstPoolScreen.cpp  InstPoolScreen.h  InstPoolScreenLayout.h
src/ui/screens/instrument/: InstrumentCursorId.h  InstrumentMacrosynLayout.h  InstrumentSamplerLayout.h  InstrumentScreen.cpp  InstrumentScreen.h
src/ui/screens/mixer/: MixerScreen.cpp  MixerScreen.h  MixerScreenLayout.h
src/ui/screens/mods/: ModScreen.cpp  ModScreen.h  ModScreenLayout.h
src/ui/screens/phrase/: PhraseScreen.cpp  PhraseScreen.h  PhraseScreenLayout.h
src/ui/screens/project/: ProjectScreen.cpp  ProjectScreen.h  ProjectScreenLayout.h
src/ui/screens/scale/: ScaleScreen.cpp  ScaleScreen.h  ScaleScreenLayout.h
src/ui/screens/song/: SongScreen.cpp  SongScreen.h  SongScreenLayout.h
src/ui/screens/table/: TableScreen.cpp  TableScreen.h  TableScreenLayout.h
tests/: test_audio.cpp  test_commands.cpp  test_demo_verify.cpp  test_device_decode.cpp  test_fmsynth.cpp  test_fx.cpp  test_groove.cpp  test_macrosynth.cpp  test_main.cpp  test_modulation.cpp  test_persistence.cpp  test_rt_safety.cpp  test_sample_pool.cpp  test_sampler.cpp  test_sequencer_walk.cpp  test_tables.cpp  test_tempo.cpp  test_ui_fuzz.cpp  test_ui_scripts.cpp  test_wavsynth.cpp
tests/hw/: goto_project_test.m8script  set_param.m8script
tests/support/: AllocGuard.cpp  OfflineHost.cpp  OfflineHost.h
tests/ui/: closed_loop_fix.m8script  closed_loop_glitch.m8script  edit.m8script  fx_roundtrip.m8script  golden_song.json  golden_song.txt  groovetest.m8script  live_vs_offline.m8script  load_each.m8script  manifest.txt  missing_samples.m8script  nav.m8script  nav_all_screens.m8script  playhead.m8script  pre40_refuses.m8script  save_reload.m8script  snapshot_all_screens.m8script  startup_song.m8script  synth_macrosynth.m8script  task6_test.m8script  test_load2.m8script  test_nav.m8script
tests/ui/fixtures/: probe_fmsynth.m8s  probe_hypersynth.m8s  probe_table.m8s  probe_wavsynth.m8s
tests/ui/golden/: chain.txt  effects.txt  groove.txt  inst_mod.txt  inst_pool.txt  instrument.txt  mixer.txt  phrase.txt  project.txt  scale.txt  song.txt  table.txt
tools/: hw_capture_one.ps1  m8_hwtest.ps1
